# Isovector-Polarimeter-Dev

./: .gitignore  2026-03-11 smsimulator environment.txt  README.md
analysis/: README.md  REFACTOR_WALKTHROUGH.md  analyse_advanced.py  analyse_combined_landau.py  analyse_combined_landau_convoluted.py  analyse_convoluted_landau.py  analyse_jitter.py  analyse_landau.py  analyse_physical.py  analyse_root.py  analyse_run_1000.py  analyse_trigger_jitter.py  analyse_v0200.py  analyse_v0200_advanced.py  analyse_v0200_advanced_long.py  analyse_v0200_long.py  analyse_v0200_long_convoluted.py  analyse_v0500_fom.C  analyse_v0600_calibration.C  analyse_v0700_fom.C  analyse_waveform.py  calculate_calibration.py  characterize_cylindrical.py  check_900V_hist.py  check_900V_wide_hist.py  check_amplitudes.py  check_baselines.py  check_coincidence.py  check_cuboid_waveforms.py  check_cylindrical_waveforms.py  check_det1_split.py  check_raw_amplitudes.py  check_saturation.py  check_single_hist.py  check_uint8_wrap.py  (+30 more)
simulation/v0600_cylindrical_coincidence/: CMakeLists.txt  det01.cc  run_cosmic.mac  run_long.mac  setup_cosmic.mac
simulation/v0600_cylindrical_coincidence/include/: DET01DetectorConstruction.hh  DET01PrimaryGeneratorAction.hh
simulation/v0600_cylindrical_coincidence/src/: DET01DetectorConstruction.cc  DET01Hit.cc  DET01RunAction.cc
simulation/v0700_cylindrical_twin/: CMakeLists.txt  README.md  run_beam_1M.mac  run_beam_50.mac
simulation/v0700_cylindrical_twin/include/: DET01SensitiveDetector.hh
simulation/v0700_cylindrical_twin/src/: DET01DetectorConstruction.cc
(+358 files in other folders)
